modified the app to have two pages
added pitch change sliders

--- a/GlaDOS_Me/app/src/main/AndroidManifest.xml
+++ b/GlaDOS_Me/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="glados.project.elec484.glados_me" >
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
@@ -19,6 +19,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".GlaDOS_me_p2"
+            android:label="@string/title_activity_gla_dos_me_p2" >
         </activity>
     </application>
 
